--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sourcey.grex" >
+<manifest package="money.cache.grex"
+          xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.sourcey.grex.MainActivity"
+            android:name="money.cache.grex.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,8 +18,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.sourcey.grex.LoginActivity" android:theme="@style/AppTheme.Dark" />
-        <activity android:name="com.sourcey.grex.SignupActivity" android:theme="@style/AppTheme.Dark" />
+        <activity
+            android:name="money.cache.grex.LoginActivity"
+            android:theme="@style/AppTheme.Dark"/>
+        <activity
+            android:name="money.cache.grex.SignupActivity"
+            android:theme="@style/AppTheme.Dark"/>
     </application>
 
 </manifest>
