--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '22.0.1'
 
     defaultConfig {
-        applicationId "money.cache.materialloginexample"
+        applicationId "money.cache.grex"
         minSdkVersion 15
         targetSdkVersion 22
         versionCode 1
@@ -27,4 +27,5 @@ dependencies {
         exclude group: 'org.json', module: 'json'
     })
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.google.android.gms:play-services-appindexing:8.4.0'
 }
