--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '22.0.1'
 
     defaultConfig {
-        applicationId "money.cache.grex"
+        applicationId "money.cache.grexActivities"
         minSdkVersion 15
         targetSdkVersion 22
         versionCode 1
