--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".CaptureMediaActivity$LoginActivity"
+            android:name=".LoginActivity"
             android:label="@string/app_name">
 
             <!--
