--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,9 +25,10 @@ dependencies {
     compile('io.socket:socket.io-client:0.8.2', {
         exclude group: 'org.json', module: 'json'
     })
-    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    }
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
+    androidTestCompile 'com.android.support.test:runner:0.5'
+    androidTestCompile 'com.android.support:support-annotations:25.1.0'
+
     compile('com.philliphsu:bottomsheetpickers:2.1.1') {
         exclude group: 'com.android.support', module: 'appcompat-v7'
         exclude group: 'com.android.support', module: 'design'
