--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.philliphsu:bottomsheetpickers:2.1.1'
     compile 'com.android.support:support-v4:25.1.0'
+    compile 'com.android.support:cardview-v7:25.1.0'
 }
