--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,6 @@ dependencies {
     compile 'com.philliphsu:bottomsheetpickers:2.1.1'
     compile 'com.android.support:support-v4:25.1.0'
     compile 'com.android.support:cardview-v7:25.1.0'
+    compile 'com.android.support:recyclerview-v7:25.1.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
