--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Built application files
-/*/build/
+/build
 
 # Crashlytics configuations
 com_crashlytics_export_strings.xml
@@ -34,6 +34,5 @@ local.properties
 .Trashes
 ehthumbs.db
 Thumbs.db
-/build/intermediates/dex-cache/cache.xml
 .idea/copyright/
 gen/
