--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# Built application files
-/build/*
-
 # Crashlytics configuations
 com_crashlytics_export_strings.xml
 
@@ -36,3 +33,4 @@ ehthumbs.db
 Thumbs.db
 .idea/copyright/
 gen/
+build/
