--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,9 +25,6 @@ dependencies {
     compile('io.socket:socket.io-client:0.8.2', {
         exclude group: 'org.json', module: 'json'
     })
-    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
-    androidTestCompile 'com.android.support.test:runner:0.5'
-    androidTestCompile 'com.android.support:support-annotations:25.1.0'
 
     compile('com.philliphsu:bottomsheetpickers:2.1.1') {
         exclude group: 'com.android.support', module: 'appcompat-v7'
@@ -35,14 +32,18 @@ dependencies {
         exclude group: 'com.android.support', module: 'gridlayout-v7'
     }
 
-    compile 'com.android.support:appcompat-v7:25.1.0'
-    compile 'com.android.support:design:25.1.0'
+    compile 'com.android.support:appcompat-v7:25.1.1'
+    compile 'com.android.support:design:25.1.1'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.google.android.gms:play-services-appindexing:9.8.0'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.philliphsu:bottomsheetpickers:2.1.1'
-    compile 'com.android.support:support-v4:25.1.0'
-    compile 'com.android.support:cardview-v7:25.1.0'
-    compile 'com.android.support:recyclerview-v7:25.1.0'
+    compile 'com.android.support:support-v4:25.1.1'
+    compile 'com.android.support:cardview-v7:25.1.1'
+    compile 'com.android.support:recyclerview-v7:25.1.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.google.android.gms:play-services:10.0.1'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
+    androidTestCompile 'com.android.support.test:runner:0.5'
+    androidTestCompile 'com.android.support:support-annotations:25.1.1'
 }
