--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,19 +27,23 @@ dependencies {
     compile('io.socket:socket.io-client:0.8.2', {
         exclude group: 'org.json', module: 'json'
     })
-    compile 'com.android.support:support-vector-drawable:25.1.1'
-    compile 'com.android.support:appcompat-v7:25.1.1'
-    compile 'com.android.support:design:25.1.1'
+    compile('io.github.sac:SocketclusterClientJava:1.7.2') {
+        exclude group: 'org.json', module: 'json'
+    }
+    compile 'com.android.support:support-vector-drawable:25.2.0'
+    compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.android.support:design:25.2.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.github.florent37:singledateandtimepicker:1.0.4'
-    compile 'com.android.support:support-v4:25.1.1'
-    compile 'com.android.support:cardview-v7:25.1.1'
-    compile 'com.android.support:recyclerview-v7:25.1.1'
+    compile 'com.android.support:support-v4:25.2.0'
+    compile 'com.android.support:cardview-v7:25.2.0'
+    compile 'com.android.support:recyclerview-v7:25.2.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.android.gms:play-services:10.2.0'
     testCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
     androidTestCompile 'com.android.support.test:runner:0.5'
-    androidTestCompile 'com.android.support:support-annotations:25.1.1'
+    androidTestCompile 'com.android.support:support-annotations:25.2.0'
+    compile 'com.android.support:support-v4:25.2.0'
 }
