--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,6 @@ dependencies {
     androidTestCompile('com.android.support.test:runner:0.5') {
         exclude module: 'support-annotations'
     }
-    compile 'org.mongodb:mongo-java-driver:2.13.2'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.github.florent37:singledateandtimepicker:1.0.4'
@@ -51,4 +50,5 @@ dependencies {
     compile 'com.keiferstone:nonet:2.0.0'
     testCompile 'junit:junit:4.12'
     compile 'com.google.android.gms:play-services-maps:10.2.0'
+    compile 'com.google.android.gms:play-services-location:10.2.0'
 }
