--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="money.cache.grex"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="money.cache.grex">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -14,17 +14,17 @@
         android:required="true" />
 
     <application
-        android:name="money.cache.grex.GrexApp"
+        android:name=".GrexApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key"/>
-        <meta-data android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id"/>
+            android:value="@string/google_maps_key" />
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
 
         <provider
             android:name="android.support.v4.content.FileProvider"
@@ -37,7 +37,7 @@
         </provider>
 
         <activity
-            android:name="money.cache.grex.LoginActivity"
+            android:name=".LoginActivity"
             android:label="@string/app_name">
 
             <!--
@@ -49,7 +49,7 @@
             -->
         </activity>
         <activity
-            android:name="money.cache.grex.MainActivity"
+            android:name=".MainActivity"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -58,30 +58,28 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="money.cache.grex.SignActivity"
+            android:name=".SignActivity"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.EDIT" />
             </intent-filter>
         </activity>
         <activity
-            android:name="money.cache.grex.CaptureMediaActivity"
+            android:name=".CaptureMediaActivity"
             android:theme="@style/AppTheme" />
         <activity
-            android:name="money.cache.grex.HomeActivity"
+            android:name=".HomeActivity"
             android:theme="@style/AppTheme" />
-
-        <activity android:name="money.cache.grex.CreateRoomActivity">
+        <activity android:name=".CreateRoomActivity">
             <intent-filter>
                 <action android:name="android.intent.action.EDIT" />
             </intent-filter>
         </activity>
-
-        <activity android:name="com.facebook.FacebookActivity"
-            android:configChanges=
-                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name" />
-
+        <activity android:name=".InsideRooomActivity"></activity>
     </application>
 
 </manifest>
